--- a/src/styles/pages/_LandingPage.scss
+++ b/src/styles/pages/_LandingPage.scss
@@ -301,7 +301,7 @@ blockquote {
 @media (max-width: 1200px) {
   .logo-link {
     margin-top: 12px;
-    padding-bottom: 5px;
+    padding-bottom: 11.4444px;
   }
 
   .landing-page .brand-header {
